k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32415
